[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/menus/startMenu/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Sounds/UI/ButtonPress.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/friendlies/Robot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/UI/Mouseover.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/ui/fonts/Valorax-lg25V.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/menus/Credits/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/environment/tilemaps/TileMapBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/environment/tilemaps/TilemapGame.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sounds/Environment/MainScreenMusic.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/ui/menus/optionsMenu/OptionsMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/ui/buttonsTheme/Button.tres" type="Theme" id=12]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 192
font_data = ExtResource( 5 )

[node name="StartScreen" type="Node2D"]
script = ExtResource( 1 )
gamePath = "res://Game.tscn"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.54902, 0.54902, 0.54902, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -986.0
margin_top = -819.0
margin_right = 934.0
margin_bottom = 261.0
rect_scale = Vector2( 2.15656, 2.76648 )
color = Color( 0.0745098, 0.121569, 0.211765, 1 )

[node name="TileMapBackground" parent="." instance=ExtResource( 8 )]
position = Vector2( -70, -218 )
tile_data = PoolIntArray( 0, 3, 0, 1, 5, 0, 2, 4, 0, 3, 5, 0, 4, 4, 0, 65536, 5, 0, 65537, 2, 0, 65538, 3, 0, 65539, 3, 0, 65540, 4, 0, 131072, 0, 0, 131073, 2, 0, 131074, 5, 0, 131075, 1, 0, 131076, 0, 0 )

[node name="TilemapGame" parent="." instance=ExtResource( 9 )]
position = Vector2( -70, -218 )
tile_data = PoolIntArray( 196608, 1073741830, 0, 196609, -536870897, 0, 196610, -536870897, 0, 196611, -536870897, 0, 196612, 1610612742, 0 )

[node name="Robot" parent="." instance=ExtResource( 3 )]
position = Vector2( 1282, 579 )
scale = Vector2( 5, 5 )

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Continue" type="Button" parent="Buttons"]
margin_left = 400.0
margin_top = 368.0
margin_right = 960.0
margin_bottom = 448.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Buttons/Continue"]
anchor_top = -0.475
margin_top = 38.0
margin_right = 560.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1

[node name="NewGame" type="Button" parent="Buttons"]
margin_left = 400.0
margin_top = 472.0
margin_right = 960.0
margin_bottom = 552.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Buttons/NewGame"]
anchor_top = -0.475
margin_top = 38.0
margin_right = 560.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Start New Game"
align = 1
valign = 1

[node name="Options" type="Button" parent="Buttons"]
margin_left = 400.0
margin_top = 576.0
margin_right = 960.0
margin_bottom = 656.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Buttons/Options"]
margin_right = 560.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="Credits" type="Button" parent="Buttons"]
margin_left = 400.0
margin_top = 680.0
margin_right = 960.0
margin_bottom = 760.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Buttons/Credits"]
margin_right = 560.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 1
valign = 1

[node name="QuitGame" type="Button" parent="Buttons"]
margin_left = 400.0
margin_top = 784.0
margin_right = 960.0
margin_bottom = 864.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Buttons/QuitGame"]
margin_right = 560.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[node name="GameTitle" type="Label" parent="."]
margin_left = -32.0
margin_top = 75.0
margin_right = 1889.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 2 )
text = "The Override"
align = 1

[node name="OptionsMenu" parent="." instance=ExtResource( 11 )]
visible = false

[node name="CreditsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MainScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
bus = "Music"

[node name="ButtonPressSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
bus = "Sound Effects"

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Sound Effects"

[connection signal="mouse_entered" from="Buttons/Continue" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="Buttons/NewGame" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="Buttons/Options" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Buttons/Credits" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="Buttons/QuitGame" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Buttons/QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="optionsClosed" from="OptionsMenu" to="." method="_on_OptionsMenu_optionsClosed"]
[connection signal="creditsClosed" from="CreditsMenu" to="." method="_on_CreditsMenu_creditsClosed"]
